@@ -727,7 +727,7 @@ abstract class DatabaseBase implements DatabaseType {
 	 */
 	final public static function factory( $dbType, $p = array() ) {
 		$canonicalDBTypes = array(
-			'mysql', 'postgres', 'sqlite', 'oracle', 'mssql'
+			'mysql', 'mysqli', 'postgres', 'sqlite', 'oracle', 'mssql'
 		);
 		$dbType = strtolower( $dbType );
 		$class = 'Database' . ucfirst( $dbType );
